--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     <header>
+        <!-- menu de link-->
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -25,8 +26,8 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item"><a class="nav-link active " href="">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#produtos">Produtos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cadastro.html">Contato</a></li>
 
                     </ul>
                 </div>
@@ -39,6 +40,7 @@
             <div class="row">
                 <div class="col-md-7 col-sm-12">
                     <h2 class="sobre">Sobre nós</h2>
+                    <!--sobre a empresa-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quod obcaecati laborum dicta
                         asperiores beatae praesentium neque nemo, iste, sunt sint nobis ab sit impedit itaque non
                         tempora quam. Impedit!</p>
@@ -48,17 +50,58 @@
                         officiis assumenda cupiditate, deleniti magnam ipsa, explicabo pariatur in consequatur dolore
                         autem incidunt consectetur? Labore veritatis nesciunt cum quo. Lorem ipsum dolor, sit amet
                         consectetur adipisicing elit. Saepe recusandae fuga, atque quos magni in placeat consequuntur
-                        qui possimus inventore ut. Laborum.</p>
+                        qui possimus inventore ut. Laborum. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Unde provident aperiam ab velit nostrum aut molestias, voluptas veritatis similique fugiat?
+                        Necessitatibus fugiat reprehenderit minima magni numquam inventore nisi dolores nulla. Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis aliquam tenetur dignissimos
+                        asperiores nam beatae molestias illum nostrum aperiam totam omnis exercitationem, alias, dolore
+                        perspiciatis libero repudiandae dolorum. Laboriosam!</p>
 
                 </div>
                 <div class="col-md-5 col-sm-12">
+                    <!--div de imagens de telão-->
                     <!--ele tera 4 unidades de largura na media e largura total no smartphone-->
-                    <img id="destaque" src="images/sport.jpg" alt="imagem de tecnologia" class="img-fluid ">
+                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="10000">
+                                <img src="images/modelo-masculino.jpg" class="d-block w-100"
+                                    alt="Tênis Nike SB BLZR Court DVDL Unissex">
+                                <div class="carousel-caption d-none d-md-block">
+                                </div>
+
+                            </div>
+                            <div class="carousel-item" data-bs-interval="2000">
+                                <img src="images/modelo-feminino.jpg" class="d-block w-100"
+                                    alt="Tênis Nike SB BLZR Court DVDL Unissex">
+                                <div class="carousel-caption d-none d-md-block">
+
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/short-maculino.jpg" class="d-block w-100"
+                                    alt="Tênis Nike SB BLZR Court DVDL Unissex">
+                                <div class="carousel-caption d-none d-md-block">
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
 
                 </div>
             </div>
         </div>
     </section>
+
     <section id="produtos">
 
         <div class="container">
@@ -69,18 +112,21 @@
                     <h2 class="mercadoria">Produtos</h2>
 
                     <div class="card">
-                        <img src="images/nike caramelo.jpg" alt="imagem de tecnologia" class="img-fluid ">
+                        <!--primeira imagem de produto-->
+                        <img src="images/tenis-nike-sb-1.jpg" alt="imagem de tecnologia" class="img-fluid ">
                         <div class="card-body">
-                            <h5 class="card-title">Tênis Nike Revolution 6 Masculino </h5>
+                            <h5 class="card-title">Tênis Nike SB BLZR Unissex </h5>
                             <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit..</p>
                             <a class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modal-1">Ver produto</a>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="images/adidas-gb9041c3a1_640.jpg" alt="imagem de tecnologia" class="img-fluid ">
+                        <!--segunda imagem de produto-->
+                        <img src="images/tenis-1-nike-city-rep-tr-DA1352-002-1-11628869130.jpg"
+                            alt="imagem de tecnologia" class="img-fluid ">
                         <div class="card-body">
-                            <h5 class="card-title">Tênis Adidas Coreracer Masculino</h5>
+                            <h5 class="card-title">Tênis Nike City Rep TR Masculino</h5>
                             <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit..</p>
                             <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal-2">Ver
                                 produto</a>
@@ -88,9 +134,11 @@
                     </div>
 
                     <div class="card">
-                        <img src="images/nike laranja.jpg" alt="imagem de tecnologia" class="img-fluid ">
+                        <!--terceira imagem de produto-->
+                        <img src="images/tenis-nike-air-zoom-tempo-next-feminino-CI9924-800-1.jpg"
+                            alt="imagem de tecnologia" class="img-fluid ">
                         <div class="card-body">
-                            <h5 class="card-title">Tênis Nike downshifter Feminino</h5>
+                            <h5 class="card-title">Tênis nike air zoom feminino</h5>
                             <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit..</p>
                             <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal-3">Ver produto</a>
                         </div>
@@ -103,11 +151,13 @@
     </section>
 
     <section id="contato">
+        <!--formulario de contato final da pagina-->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h2>Contato</h2>
-                    <p>Ficou interessado? Ou está com alguma duvida? Preencha os campos do formulário para receber uma resposta.</p>
+                    <p>Ficou interessado? Ou está com alguma duvida? Preencha os campos e logo entraremos em contato.
+                    </p>
                 </div>
                 <div class="col-md-6 col-sm-12">
 
@@ -124,7 +174,7 @@
                             <textarea class="form-control" placeholder="Alguma duvida?" name="" rows="5"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-lg btn-success">Solicitar cotação</button>
+                        <button type="submit" class="btn btn-lg btn-success">Enviar</button>
                     </form>
 
                 </div>
@@ -134,15 +184,36 @@
 
 
     <div class="modal fade" id="modal-1">
+        <!--primeiro modal de produto-->
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-
-                    <h5 class="modal-title">Tênis Nike Revolution 6 Masculino</h5>
+                    <h5 class="modal-title">Tênis Nike SB BLZR Court DVDL Unissex</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                 </div>
                 <div class="modal-body">
-                    <h6>Confira o tamanho e os preços</h6>
+
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/tenis-nike-sb-1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-nike-sb-2.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-nike-sb-3.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
@@ -176,19 +247,42 @@
                     <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
+
         </div>
+    </div>
     </div>
 
     <div class="modal fade" id="modal-2">
+        <!--primeiro modal de produto-->
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-
-                    <h5 class="modal-title">Tênis Adidas Coreracer Masculino</h5>
+                    <h5 class="modal-title">Tênis Nike City Rep TR Masculino</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                 </div>
                 <div class="modal-body">
-                    <h6>Confira o tamanho e os preços</h6>
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/tenis-1-nike-city-rep-tr-DA1352-002-1-11628869130.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-2-nike-city-rep-tr-DA1352-002-2-21628869131.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-3-nike-city-rep-tr-DA1352-002-5-51628869134.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
@@ -196,6 +290,7 @@
                                 <th>Valor</th>
                             </tr>
                         </thead>
+
                         <tbody>
 
                             <tr>
@@ -222,20 +317,43 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
+
         </div>
     </div>
 
     <div class="modal fade" id="modal-3">
+        <!--terceiro modal de produto-->
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-
                     <h5 class="modal-title">Tênis Nike downshifter Feminino</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                 </div>
                 <div class="modal-body">
-                    <h6>Confira o tamanho e os preços</h6>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/tenis-nike-air-zoom-tempo-next-feminino-CI9924-800-1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-nike-air-zoom-tempo-next-feminino-CI9924-800-2.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/tenis-nike-air-zoom-tempo-next-feminino-CI9924-800-5.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                     <table class="table table-hover table-striped">
+
                         <thead>
                             <tr>
                                 <th>Tamanho Disponivel</th>
@@ -274,6 +392,15 @@
 
 
     <script src="bootstrap-cod/js/bootstrap.bundle.min.js"></script>
+    <script>
+        var myCarousel = document.querySelector('#myCarousel')
+        var carousel = new bootstrap.Carousel(myCarousel, {
+
+            interval: 2000,
+            wrap: false
+        })
+    </script>
+
 </body>
 
 </html>
