--- a/produtos.html
+++ b/produtos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap-cod/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
@@ -178,36 +179,46 @@
     </div>
 
     <div class="modal fade" id="modal-2">
-        <!--primeiro modal de produto-->
+        <!--segundo modal de produto-->
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Tênis Nike City Rep TR Masculino</h5>
+                    <h5 class="modal-title">Tênis Nike SB BLZR Court DVDL Unissex</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                 </div>
                 <div class="modal-body">
+
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="images/tenis-1-nike-city-rep-tr-DA1352-002-1-11628869130.jpg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="images/tenis-2-nike-city-rep-tr-DA1352-002-2-21628869131.jpg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="images/tenis-3-nike-city-rep-tr-DA1352-002-5-51628869134.jpg" class="d-block w-100" alt="...">
-                          </div>
+
+                            <div class="carousel-item active">
+                                <img src="images/tenis-1-nike-city-rep-tr-DA1352-002-1-11628869130.jpg"
+                                    class="d-block w-100" alt="...">
+
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/tenis-2-nike-city-rep-tr-DA1352-002-2-21628869131.jpg"
+                                    class="d-block w-100" alt="...">
+
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/tenis-3-nike-city-rep-tr-DA1352-002-5-51628869134.jpg"
+                                    class="d-block w-100" alt="...">
+
+                            </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-
                     <table class="table table-hover table-striped">
                         <thead>
                             <tr>
@@ -215,23 +226,22 @@
                                 <th>Valor</th>
                             </tr>
                         </thead>
-
                         <tbody>
 
                             <tr>
-                                <td>N:36</td>
+                                <td>N:38</td>
                                 <td>R$ 100</td>
 
                             </tr>
                             <tr>
                                 <td>N:40</td>
-                                <td>R$ 150</td>
+                                <td>R$ 200</td>
 
                             </tr>
 
                             <tr>
                                 <td>N:42</td>
-                                <td>R$ 180</td>
+                                <td>R$ 300</td>
 
                             </tr>
                         </tbody>
@@ -239,7 +249,7 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
 
